Fix scaling broken in recent pull

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -16,6 +16,10 @@ p  {
 
 video {
   margin: auto;
+  display: block;
+  min-height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 /* Links */
